# cohdl_xil

./: .gitignore  README.md  pyproject.toml  setup.py
cohdl_xil/: __init__.py
cohdl_xil/_common/: __init__.py  cohdl_make_util.py  constraints.py  fpga.py  io_standards.py  ip_block.py  tcl_writer.py  vivado_project.py
cohdl_xil/boards/trenz/: __init__.py  nexys_a7.py  nexys_a7.pyi
cohdl_xil/boards/trenz/nexys_a7_dep/: default_mig.prj
cohdl_xil/fpgas/artix/: artix_7.py
cohdl_xil/ip/: axi_uartlite.py  fifo.py  ila.py  mig.py  mmcm.py
example/: 01_first.py  02_using_ip.py  03_uart_axi.py  04_mmcm.py  05_spi_adc.py  06_spi_adc.py  07_spi_adc.py
example/vga/: README.md  vga_ascii_uart.py
example/vga/vga_impl/: font_reader.py  vga.py  vga_text.py
