[project]
name="cohdl_xil"
version="0.2.3"

authors = [
    { name = "Alexander Forster", email = "alexander.forster123@gmail.com" }
]

description="Adds support for the Xilinx toolchain to CoHDL"
readme = "README.md"
requires-python = ">= 3.10"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]

dependencies = [
    "cohdl>=0.2.3"
]

[project.urls]
Homepage = "https://github.com/alexander-forster/cohdl_xil"

[tool.setuptools.package-data]
"*" = ["*.pyi", "boards/*"]